package org.vidrec.recommendationservice.interaction;

public enum EventType {
    WATCH,
    LIKE,
    DISLIKE,
    SEARCH_CLICK,
    REWATCH
}